ingress/k8s/ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
    - host: ams-app.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
    - host: pma.ams-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
